--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,9 +13,9 @@ h1 {
   font-size: 50px;
 }
 
-.download {
-  color: Aquamarine;
-  font-size: 16px;
+p {
+  color: Gray;
+  font-size: 21px;
 }
 
 h2 {
@@ -23,11 +23,11 @@ h2 {
   font-size: 42px;
 }
 
-h3 {
-  color: Gray;
-  font-size: 21px;
-}
-
 .copyright {
   text-align: right;
+}
+
+.download {
+  color: Aquamarine;
+  font-size: 16px;
 }
